fixed resume alignment styling

--- a/resume-style.css
+++ b/resume-style.css
@@ -54,10 +54,30 @@ main {
 
 .resume {
   margin: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.exp-box {
+.exp-box-1 {
   margin: 20px;
+  margin-left: 65px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.exp-box-2 {
+  margin: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.exp-box-3 {
+  margin: 20px;
+  margin-left: 90px;
   display: flex;
   flex-direction: row;
   align-items: center;
